[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background_theme.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sad_syth.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )
Coin = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.466667, 0.670588, 0.768627, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="DeteriorationTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="DrunkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PointTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="OuchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="player_hit"]
[connection signal="pill_grabbed" from="Player" to="." method="pill_grabbed"]
[connection signal="timeout" from="DeteriorationTimer" to="." method="_on_DeteriorationTimer_timeout"]
[connection signal="timeout" from="DrunkTimer" to="." method="_on_DrunkTimer_timeout"]
[connection signal="timeout" from="PointTimer" to="." method="_on_PointTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[editable path="HUD"]
